fixed menu handlebars

--- a/.env
+++ b/.env
@@ -1,11 +1,5 @@
-<<<<<<< HEAD
-DB_NAME='inventory_db'
-DB_PASSWORD='180203da'
-DB_USER='root'
-=======
-DB_NAME='BurgerData'
-DB_PASSWORD=''
+DB_NAME='burgerdata'
+DB_PASSWORD='Ruffles8.!'
 DB_USER='root'
 
 
->>>>>>> 820359e (minor changes)
