--- a/.env
+++ b/.env
@@ -1,11 +1,3 @@
-<<<<<<< HEAD
 DB_NAME='inventory_db'
-DB_PASSWORD='180203da'
+DB_PASSWORD='TestS'
 DB_USER='root'
-=======
-DB_NAME='BurgerData'
-DB_PASSWORD=''
-DB_USER='root'
-
-
->>>>>>> 820359e (minor changes)
